--- a/src/stylesheets/abstracts/_mixins.scss
+++ b/src/stylesheets/abstracts/_mixins.scss
@@ -36,3 +36,13 @@
     flex-wrap: $wrap;
   }
 }
+
+
+// background image
+
+@mixin background-img ($bg: "") {
+  background-image: url($bg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
