--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -9,8 +9,10 @@ $extra-lager: 1200px;
 $mobile: calc($medium - 1px);
 $tablet: calc($extra-lager - 1px);
 
+
 // Colors
 $primary-color: #ebcb80;
 $background-color: #ffffff;
+$secondary-color:#4b4b4b;
 $text-color: #4b4b4b;
 $main-spacing: pxToRem(-0.58);
