--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -4,12 +4,14 @@
 $primary-font: Roboto;
 
 // Breakpoints
-$mobile: 321px;
-$desktop: 1440px ;
-$tablet: 768px ;
+$medium: 768px;
+$extra-large: 1200px;
+$mobile: calc($medium - 1px);
+$tablet: calc($extra-large - 1px);
 
 // Colors
 $primary-color: #ebcb80;
 $background-color: #ffffff;
+$secondary-color:#4b4b4b;
 $text-color: #4b4b4b;
 $main-spacing: pxToRem(-0.58);
