feat: Implement Start Selling Section #7

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -42,4 +42,18 @@
         </div>
       </div>
     </section>
-  </main>
+    <!-- Start Selling Instantly -->
+     <section class="start-selling">
+        <span class="start-selling_title">Start Selling Instantly</span>
+        <p class="start-selling_sub">Start Selling With Your Pre-paid account. No deposit needed.</p>
+
+        <form class="start-selling_form">
+            <input 
+            type="email"
+            class="start-selling_input"
+            placeholder="Email"
+            />
+            <input type="submit" class="start-selling_btn" value="REGISTER"/>
+        </form>
+     </section>
+</main>
