feat: Implement Get in touch section #10

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -43,3 +43,58 @@
       </div>
     </section>
   </main>
+  <!-- Get In touch -->
+  <section class="contact">
+    <div class="contact-content">
+      <h2 class="contact-content_title">Get in touch</h2>
+
+      <form class="contact-content_form">
+        <input type="text" value="Name*" required class="form_input" />
+        <input type="email" value="Email*" required class="form_input" />
+        <textarea
+          type="text"
+          class="form_input"
+          rows="5"
+          cols="30"
+          placeholder="Message"
+        ></textarea>
+        <div class="form_checkbox">
+          <input type="checkbox" id="urgent" class="checkbox_input" />
+          <label for="urgent" class="checkbox_label"
+            >Most Urgent Question</label
+          >
+        </div>
+        <input type="text" value="SUBMIT" required class="form_btn" />
+      </form>
+
+      <div class="contact-content_info">
+        <div class="info-list">
+          <img
+            src="../assets/icons/location.svg"
+            alt="location"
+            class="info-list_icon"
+          />
+          <p class="info-list_des">
+            2300 W Arbutus Dr Citrus Springs, FL 34434, USA
+          </p>
+        </div>
+        <div class="info-list">
+          <img
+            src="../assets/icons/mail.svg"
+            alt="location"
+            class="info-list_icon"
+          />
+          <p class="info-list_des">contact@hofmannui.net</p>
+        </div>
+        <div class="info-list">
+          <img
+            src="../assets/icons/phone.svg"
+            alt="location"
+            class="info-list_icon"
+          />
+          <p class="info-list_des">952-775-6021</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
