--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -100,23 +100,15 @@
 
   <!-- Get In touch -->
   <section class="contact">
-    <div class="container container-contact">
-      <h2 class="title">Get in Touch</h2>
-      <form action="#" class="contact_form">
-        <input
-          type="text"
-          class="input-main contact_form_input"
-          placeholder="Name*"
-          required
-        />
-        <input
-          type="email"
-          class="input-main contact_form_input"
-          placeholder="Email*"
-          required
-        />
+    <div class="contact-content">
+      <h2 class="contact-content_title">Get in touch</h2>
+
+      <form class="contact-content_form">
+        <input type="text" value="Name*" required class="form_input" />
+        <input type="email" value="Email*" required class="form_input" />
         <textarea
-          class="input-main contact_form_input"
+          type="text"
+          class="form_input"
           rows="5"
           cols="30"
           placeholder="Message"
@@ -151,47 +143,7 @@
             alt="phone"
           />
           <p class="contact-info_item">952-775-6021</p>
-        <div class="form_checkbox">
-          <input type="checkbox" id="urgent" class="checkbox_input" />
-          <label for="urgent" class="checkbox_label"
-            >Most Urgent Question</label
-          >
-        </div>
-        <input type="text" value="SUBMIT" required class="form_btn" />
-        <input
-          type="submit"
-          value="SUBMIT"
-          class="btn"
-        />
-      </form>
-
-      <!-- Start of contact info -->
-      <div class="contact_info">
-        <div class="contact-info_list">
-          <img
-            src="../assets/icons/location.svg"
-            class="contact_icon"
-            alt="location"
-          />
-          <p class="contact-info_item">
-            2300 W Arbutus Dr Citrus Springs, FL 34434, USA
-          </p>
-        </div>
-        <div class="contact-info_list">
-          <img
-            src="../assets/icons/mail.svg"
-            class="contact_icon"
-            alt="mail"
-          />
-          <p class="contact-info_item">contact@hofmannui.net</p>
-        </div>
-        <div class="contact-info_list">
-          <img
-            src="../assets/icons/phone.svg"
-            class="contact_icon"
-            alt="phone"
-          />
-          <p class="contact-info_item">952-775-6021</p>
+      
         </div>
       </div>
     </div>
