--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -1,59 +1,160 @@
 <main>
-    <!-- What client saying -->
-    <section class="container container-clients">
-      <div class="clients">
-        <div class="clients-head">
-          <p class="clients-title">What Clients are saying</p>
-          <span class="clients-quotation">“</span>
+  <!-- Stunning result -->
+  <section class="result">
+    <h3 class="result-title">Stunning Results</h3>
+    <p class="result-desc">
+      Just look to the statistics we have generate the past year.
+    </p>
+
+    <div class="result-cards">
+      <include
+        src="./components/result-card.html"
+        locals='{
+        "resultImage": "../assets/images/desktop/circle-1.png",
+        "resultPercent": "74",
+        "resultSup": "98",
+        "resultTitle": "total conversion",
+        "resultDesc": "The past few years have seen a dramatic change in the public perception of cosmetic surgery."
+      }'
+      >
+      </include>
+
+      <include
+        src="./components/result-card.html"
+        locals='{
+        "resultImage": "../assets/images/desktop/circle-2.png",
+        "resultPercent": "39",
+        "resultSup": "75",
+        "resultTitle": "free downloads",
+        "resultDesc": "Can you imagine what we will be downloading in another twenty years?"
+      }'
+      >
+      </include>
+
+      <include
+        src="./components/result-card.html"
+        locals='{
+        "resultImage": "../assets/images/desktop/circle-3.png",
+        "resultPercent": "81",
+        "resultSup": "15",
+        "resultTitle": "unique visitors",
+        "resultDesc": "WordPress, the premier free open-source blogging utility, has gone through several upgrades in its life."
+      }'
+      >
+      </include>
+    </div>
+  </section>
+  <!-- What client saying -->
+  <section class="container container-clients">
+    <div class="clients">
+      <div class="clients-head">
+        <p class="clients-title">What Clients are saying</p>
+        <span class="clients-quotation">“</span>
+      </div>
+
+      <div class="clients-slider">
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/prev-icon.svg"
+            alt="prev"
+            class="img-slider"
+          />
         </div>
-  
-        <div class="clients-slider">
-          <div class="clients-slider_icon">
-            <img
-              src="../assets/icons/prev-icon.svg"
-              alt="prev"
-              class="img-slider"
-            />
-          </div>
-  
-          <p class="clients-slider_content">
-            Businesses at present had creatively generated effective advertising
-            campaigns in the form of audio visual media that includes the
-            television and radios and the print media that cover the newspaper and
-            campaign materials like the posters, brochures, business cards, flyers
-            and many more.
-          </p>
-  
-          <div class="clients-slider_icon">
-            <img
-              src="../assets/icons/next-icon.svg"
-              alt="next"
-              class="img-slider"
-            />
-          </div>
-        </div>
-  
-        <div class="clients-person">
-          <img src="../assets/images/desktop/person.png" class="img-person" />
-          <div class="clients-person_contact">
-            <p class="person-name">Ophelia Holland</p>
-            <p>@ophelia_holland</p>
-          </div>
+
+        <p class="clients-slider_content">
+          Businesses at present had creatively generated effective advertising
+          campaigns in the form of audio visual media that includes the
+          television and radios and the print media that cover the newspaper and
+          campaign materials like the posters, brochures, business cards, flyers
+          and many more.
+        </p>
+
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/next-icon.svg"
+            alt="next"
+            class="img-slider"
+          />
         </div>
       </div>
-    </section>
-    <!-- Start Selling Instantly -->
-     <section class="start-selling">
-        <h2 class="start-selling_title">Start Selling Instantly</h2>
-        <p class="start-selling_sub">Start Selling With Your Pre-paid account. No deposit needed.</p>
 
-        <form class="start-selling_form">
-            <input 
-            type="email"
-            class="start-selling_input"
-            placeholder="Email"
-            />
-            <input type="submit" class="start-selling_btn" value="REGISTER"/>
-        </form>
-     </section>
+      <div class="clients-person">
+        <img src="../assets/images/desktop/person.png" class="img-person" />
+        <div class="clients-person_contact">
+          <p class="person-name">Ophelia Holland</p>
+          <p>@ophelia_holland</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Start Selling Instantly -->
+  <section class="start-selling">
+    <h2 class="start-selling_title">Start Selling Instantly</h2>
+    <p class="start-selling_sub">
+      Start Selling With Your Pre-paid account. No deposit needed.
+    </p>
+
+    <form class="start-selling_form">
+      <input type="email" class="start-selling_input" placeholder="Email" />
+      <input type="submit" class="start-selling_btn" value="REGISTER" />
+    </form>
+  </section>
+
+  <!-- Get In touch -->
+  <section class="contact">
+    <div class="container container-contact">
+      <h2 class="title">Get in Touch</h2>
+      <form action="#" class="contact_form">
+        <input
+          type="text"
+          class="input-main contact_form_input"
+          placeholder="Name*"
+          required
+        />
+        <input
+          type="email"
+          class="input-main contact_form_input"
+          placeholder="Email*"
+          required
+        />
+        <textarea
+          class="input-main contact_form_input"
+          rows="5"
+          cols="30"
+          placeholder="Message"
+        ></textarea>
+        <label class="form-checkbox contact_form_input"
+          >Most Urgent Question <input type="checkbox" checked />
+          <span class="form-checkbox_checkmark"></span>
+        </label>
+        <input type="submit" value="SUBMIT" class="btn" />
+      </form>
+
+      <!-- Start of contact info -->
+      <div class="contact_info">
+        <div class="contact-info_list">
+          <img
+            src="../assets/icons/location.svg"
+            class="contact_icon"
+            alt="location"
+          />
+          <p class="contact-info_item">
+            2300 W Arbutus Dr Citrus Springs, FL 34434, USA
+          </p>
+        </div>
+        <div class="contact-info_list">
+          <img src="../assets/icons/mail.svg" class="contact_icon" alt="mail" />
+          <p class="contact-info_item">contact@hofmannui.net</p>
+        </div>
+        <div class="contact-info_list">
+          <img
+            src="../assets/icons/phone.svg"
+            class="contact_icon"
+            alt="phone"
+          />
+          <p class="contact-info_item">952-775-6021</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
