--- a/src/stylesheets/pages/home/_contact.scss
+++ b/src/stylesheets/pages/home/_contact.scss
@@ -14,6 +14,22 @@
     @include flex($direction: column);
     border-radius: pxToRem(10);
 
+}
+
+.contact-content {
+  &_title {
+    font-size: 44px;
+  }
+
+  &_form {
+    @include flex($direction: column);
+    max-width: 360px;
+    background-color: $text-color;
+    border-radius: pxToRem(10);
+    margin: 52px auto 40px;
+    padding: 48px 52px 24px;
+    gap: 30px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     @include tablet {
       max-width: 22.5rem;
     }
@@ -126,5 +142,75 @@
   @include mobile {
     font-size: pxToRem(31);
     padding-bottom: 7px;
+  }
+}
+
+  &_info {
+    @include flex($justify: center, $wrap: wrap, $align: center);
+    gap: 20px;
+  }
+}
+
+.form {
+  @include tablet {
+    padding: 12px;
+  }
+  &_input {
+    border-radius: 5px;
+    border: 1px solid #999999;
+    padding: 10px 23px;
+    background-color: #e8e8e8;
+    max-width: 256px;
+
+    &::placeholder {
+      color: $text-color;
+    }
+  }
+
+  &_btn {
+    background-color: $primary-color;
+    border: none;
+    margin: 0 auto;
+    padding: 16px 18px;
+    border-radius: 20px;
+    text-align: center;
+  }
+
+  &_checkbox {
+    input {
+      appearance: none;
+      background-color: $background-color; // Màu nền mặc định cho checkbox
+      max-width: 25px;
+      max-height: 25px;
+      border: 1px solid $primary-color;
+      border-radius: 3px;
+      padding: 2px 3px;
+
+      &:checked {
+        background-color: $primary-color;
+        &::after {
+          content: "✔";
+          color: $background-color;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+}
+
+.info-list {
+  @include flex($justify: center);
+  gap: 12px;
+
+  @include mobile {
+    @include flex($direction: column);
   }
 }
