feat: Implement Get in touch section #10

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -44,7 +44,6 @@
       </include>
     </div>
   </section>
-
   <!-- What client saying -->
   <section class="container container-clients">
     <div class="clients">
@@ -241,9 +240,11 @@
     </div>
   </section>
 
+
+
   <!-- Get In touch -->
   <section class="contact">
-    <div class="container">
+    <div class="container container-contact">
       <h2 class="title">Get in Touch</h2>
       <form action="#" class="contact_form">
         <input
