--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -240,27 +240,17 @@
     </div>
   </section>
 
-
-
   <!-- Get In touch -->
   <section class="contact">
-    <div class="container container-contact">
-      <h2 class="title">Get in Touch</h2>
-      <form action="#" class="contact_form">
-        <input
-          type="text"
-          class="input-main contact_form_input"
-          placeholder="Name*"
-          required
-        />
-        <input
-          type="email"
-          class="input-main contact_form_input"
-          placeholder="Email*"
-          required
-        />
+    <div class="contact-content">
+      <h2 class="contact-content_title">Get in touch</h2>
+
+      <form class="contact-content_form">
+        <input type="text" value="Name*" required class="form_input" />
+        <input type="email" value="Email*" required class="form_input" />
         <textarea
-          class="input-main contact_form_input"
+          type="text"
+          class="form_input"
           rows="5"
           cols="30"
           placeholder="Message"
