--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -85,7 +85,6 @@
       </div>
     </div>
   </section>
-
   <!-- Start Selling Instantly -->
   <section class="start-selling">
     <h2 class="start-selling_title">Start Selling Instantly</h2>
@@ -97,5 +96,63 @@
       <input type="email" class="start-selling_input" placeholder="Email" />
       <input type="submit" class="start-selling_btn" value="REGISTER" />
     </form>
+  </section>
+
+  <!-- Get In touch -->
+  <section class="contact">
+    <div class="container container-contact">
+      <h2 class="title">Get in Touch</h2>
+      <form action="#" class="contact_form">
+        <input
+          type="text"
+          class="input-main contact_form_input"
+          placeholder="Name*"
+          required
+        />
+        <input
+          type="email"
+          class="input-main contact_form_input"
+          placeholder="Email*"
+          required
+        />
+        <textarea
+          class="input-main contact_form_input"
+          rows="5"
+          cols="30"
+          placeholder="Message"
+        ></textarea>
+        <label class="form-checkbox contact_form_input"
+          >Most Urgent Question <input type="checkbox" checked />
+          <span class="form-checkbox_checkmark"></span>
+        </label>
+        <input type="submit" value="SUBMIT" class="btn" />
+      </form>
+
+      <!-- Start of contact info -->
+      <div class="contact_info">
+        <div class="contact-info_list">
+          <img
+            src="../assets/icons/location.svg"
+            class="contact_icon"
+            alt="location"
+          />
+          <p class="contact-info_item">
+            2300 W Arbutus Dr Citrus Springs, FL 34434, USA
+          </p>
+        </div>
+        <div class="contact-info_list">
+          <img src="../assets/icons/mail.svg" class="contact_icon" alt="mail" />
+          <p class="contact-info_item">contact@hofmannui.net</p>
+        </div>
+        <div class="contact-info_list">
+          <img
+            src="../assets/icons/phone.svg"
+            class="contact_icon"
+            alt="phone"
+          />
+          <p class="contact-info_item">952-775-6021</p>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
