feat: Implement Get in touch section #10

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -100,23 +100,15 @@
 
   <!-- Get In touch -->
   <section class="contact">
-    <div class="container container-contact">
-      <h2 class="title">Get in Touch</h2>
-      <form action="#" class="contact_form">
-        <input
-          type="text"
-          class="input-main contact_form_input"
-          placeholder="Name*"
-          required
-        />
-        <input
-          type="email"
-          class="input-main contact_form_input"
-          placeholder="Email*"
-          required
-        />
+    <div class="contact-content">
+      <h2 class="contact-content_title">Get in touch</h2>
+
+      <form class="contact-content_form">
+        <input type="text" value="Name*" required class="form_input" />
+        <input type="email" value="Email*" required class="form_input" />
         <textarea
-          class="input-main contact_form_input"
+          type="text"
+          class="form_input"
           rows="5"
           cols="30"
           placeholder="Message"
@@ -151,6 +143,41 @@
             alt="phone"
           />
           <p class="contact-info_item">952-775-6021</p>
+        <div class="form_checkbox">
+          <input type="checkbox" id="urgent" class="checkbox_input" />
+          <label for="urgent" class="checkbox_label"
+            >Most Urgent Question</label
+          >
+        </div>
+        <input type="text" value="SUBMIT" required class="form_btn" />
+      </form>
+
+      <div class="contact-content_info">
+        <div class="info-list">
+          <img
+            src="../assets/icons/location.svg"
+            alt="location"
+            class="info-list_icon"
+          />
+          <p class="info-list_des">
+            2300 W Arbutus Dr Citrus Springs, FL 34434, USA
+          </p>
+        </div>
+        <div class="info-list">
+          <img
+            src="../assets/icons/mail.svg"
+            alt="location"
+            class="info-list_icon"
+          />
+          <p class="info-list_des">contact@hofmannui.net</p>
+        </div>
+        <div class="info-list">
+          <img
+            src="../assets/icons/phone.svg"
+            alt="location"
+            class="info-list_icon"
+          />
+          <p class="info-list_des">952-775-6021</p>
         </div>
       </div>
     </div>
