feat: Implement Hero section #4

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -5,9 +5,9 @@ $primary-font: Roboto;
 
 // Breakpoints
 $medium: 768px;
-$extra-large: 1200px;
+$extra-lager: 1200px;
 $mobile: calc($medium - 1px);
-$tablet: calc($extra-large - 1px);
+$tablet: calc($extra-lager - 1px);
 
 // Colors
 $primary-color: #ebcb80;
