--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -128,6 +128,7 @@
           <span class="form-checkbox_checkmark"></span>
         </label>
         <input type="submit" value="SUBMIT" class="btn" />
+        <input type="submit" value="SUBMIT" class="btn" />
       </form>
 
       <!-- Start of contact info -->
