feat: responsive for contact list and make checkbox #10

--- a/src/stylesheets/pages/home/_contact.scss
+++ b/src/stylesheets/pages/home/_contact.scss
@@ -13,22 +13,7 @@
     background-color: $text-color;
     @include flex($direction: column);
     border-radius: pxToRem(10);
-}
 
-.contact-content {
-  &_title {
-    font-size: 44px;
-  }
-
-  &_form {
-    @include flex($direction: column);
-    max-width: 360px;
-    background-color: $text-color;
-    border-radius: pxToRem(10);
-    margin: 52px auto 40px;
-    padding: 48px 52px 24px;
-    gap: 30px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     @include tablet {
       max-width: 22.5rem;
     }
@@ -148,68 +133,56 @@
     @include flex($justify: center, $wrap: wrap, $align: center);
     gap: 20px;
   }
+
+  &-info {
+    &_list {
+      @include flex($align: center, $justify: center);
+    }
+
+    &_item {
+      margin-left: 1rem;
+
+      @include tablet {
+        margin-left: 1.5rem;
+      }
+
+      @include mobile {
+        margin-left: pxToRem(10);
+      }
+    }
+  }
+
+  &_icon {
+    max-width: 12px;
+    max-height: 17px;
+  }
+
+  
+
+.btn {
+  padding: 15px 54px;
+  text-align: center;
+  border-radius: 2rem;
+  cursor: pointer;
+  border: 2px solid $primary-color;
+  background-color: $primary-color;
+  margin: 0 auto;
+  max-width: 198px;
 }
 
-.form {
+.title {
+  font-size: pxToRem(44);
+  line-height: pxToRem(48);
+  padding-bottom: 22px;
+
   @include tablet {
-    padding: 12px;
+    font-size: pxToRem(32);
+    line-height: pxToRem(40);
+    padding-bottom: 10px;
   }
-  &_input {
-    border-radius: 5px;
-    border: 1px solid #999999;
-    padding: 10px 23px;
-    background-color: #e8e8e8;
-    max-width: 256px;
-
-    &::placeholder {
-      color: $text-color;
-    }
-  }
-
-  &_btn {
-    background-color: $primary-color;
-    border: none;
-    margin: 0 auto;
-    padding: 16px 18px;
-    border-radius: 20px;
-    text-align: center;
-  }
-
-  &_checkbox {
-    input {
-      appearance: none;
-      background-color: $background-color; // Màu nền mặc định cho checkbox
-      max-width: 25px;
-      max-height: 25px;
-      border: 1px solid $primary-color;
-      border-radius: 3px;
-      padding: 2px 3px;
-
-      &:checked {
-        background-color: $primary-color;
-        &::after {
-          content: "✔";
-          color: $background-color;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-}
-
-.info-list {
-  @include flex($justify: center);
-  gap: 12px;
 
   @include mobile {
-    @include flex($direction: column);
+    font-size: pxToRem(20);
+    padding-bottom: 7px;
   }
 }
