--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -242,15 +242,23 @@
 
   <!-- Get In touch -->
   <section class="contact">
-    <div class="contact-content">
-      <h2 class="contact-content_title">Get in touch</h2>
-
-      <form class="contact-content_form">
-        <input type="text" value="Name*" required class="form_input" />
-        <input type="email" value="Email*" required class="form_input" />
-        <textarea
+    <div class="container">
+      <h2 class="title">Get in Touch</h2>
+      <form action="#" class="contact_form">
+        <input
           type="text"
-          class="form_input"
+          class="input-main contact_form_input"
+          placeholder="Name*"
+          required
+        />
+        <input
+          type="email"
+          class="input-main contact_form_input"
+          placeholder="Email*"
+          required
+        />
+        <textarea
+          class="input-main contact_form_input"
           rows="5"
           cols="30"
           placeholder="Message"
