--- a/src/stylesheets/pages/home/_contact.scss
+++ b/src/stylesheets/pages/home/_contact.scss
@@ -78,6 +78,31 @@
     padding: 0 15px;
     
   }
+
+  &-info {
+    &_list {
+      @include flex($align: center, $justify: center);
+    }
+
+    &_item {
+      margin-left: 1rem;
+
+      @include tablet {
+        margin-left: 1.5rem;
+      }
+
+      @include mobile {
+        margin-left: pxToRem(10);
+      }
+    }
+  }
+
+  &_icon {
+    max-width: 12px;
+    max-height: 17px;
+  }
+
+  
 }
 
 .btn {
