feat: responsive for contact list and make checkbox #10

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -270,6 +270,7 @@
           <span class="form-checkbox_checkmark"></span>
         </label>
         <input type="submit" value="SUBMIT" class="btn" />
+        <input type="submit" value="SUBMIT" class="btn" />
       </form>
 
       <!-- Start of contact info -->
