fix: font size of title and error unknown out dir in package.json #3

--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -44,6 +44,10 @@
     span {
       font-size: pxToRem(18);
     }
+
+    @include tablet {
+      font-size: pxToRem(12);
+    }
   }
 
   &_link {
