refactor: change font and letter spacing, change duplicate code #3

--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -40,6 +40,7 @@
     padding-bottom: 20px;
     margin-bottom: 15px;
     border-bottom: 1px solid #7d7d7d;
+    letter-spacing: $main-spacing;
 
     span {
       font-size: pxToRem(18);
@@ -87,7 +88,12 @@
     max-height: 25px;
 
     :hover {
-        transform: translateY(-10px);
+      transform: translateY(-10px);
+    }
+
+    @include tablet {
+      max-width: 18px;
+      max-height: 17px;
     }
 
     img {
