--- a/src/layouts/footer.html
+++ b/src/layouts/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer_top">
         <include
-          src="./components/footerList.html"
+          src="./components/footer-list.html"
           locals='{
                       "title": "COMPANY",
                       "list":"[`News`,`Blog`,`Testimonials`,`About Us`,`Press Kit`,`Get in Touch`,]"
@@ -10,21 +10,21 @@
         ></include>
 
         <include
-          src="./components/footerList.html"
+          src="./components/footer-list.html"
           locals='{
                 "title": "PRODUCTS",
                 "list":"[`UI Kits`, `Icons`,`Wordpress Themes`,`Mock-Ups`,]"
             }'
         ></include>
         <include
-          src="./components/footerList.html"
+          src="./components/footer-list.html"
           locals='{
                 "title": "SUPPORT",
                 "list":"[`Community`, `Forum`,`Distributors`,`Privacy Policy`,`Term of Use`,]"
             }'
         ></include>
         <include
-          src="./components/footerList.html"
+          src="./components/footer-list.html"
           locals='{
                 "title": "CUSTOMERS",
                 "list":"[`Documentation`,`Tools`,`Downloads`,`Developer Center`]"
@@ -37,11 +37,12 @@
         <p>Created by Goldenfox — okodesign.net</p>
       </div>
       <div class="footer_bottom_social">
-        <a class="footer_icon"><img src="../assets/icons/linkedin.svg" /></a>
-        <a class="footer_icon"><img src="../assets/icons/google-plus.svg"/></a>
-        <a class="footer_icon"><img src="../assets/icons/twitter.svg" /></a>
-        <a class="footer_icon"><img src="../assets/icons/facebook.svg" /></a>
-        <a class="footer_icon"><img src="../assets/icons/instagram.svg"/></a>
+        <include
+        src="./components/icon-footer.html"
+        locals='{
+          "urlImage": "[`../assets/icons/linkedin.svg`,`../assets/icons/google-plus.svg`, `../assets/icons/twitter.svg`, `../assets/icons/facebook.svg`, `../assets/icons/instagram.svg`]"
+        }'
+        >
       </div>
     </div>
   </div>
