--- a/src/stylesheets/components/_index.scss
+++ b/src/stylesheets/components/_index.scss
@@ -1,6 +1,6 @@
 @use "../abstracts/" as *;
 @forward "nav";
 @forward "resultCard";
-@forward "animate"
-
+@forward "animate";
+@forward "product-card";
 
