feat: Implement Products section #8

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -1,45 +1,101 @@
 <main>
-    <!-- What client saying -->
-    <section class="container container-clients">
-      <div class="clients">
-        <div class="clients-head">
-          <p class="clients-title">What Clients are saying</p>
-          <span class="clients-quotation">“</span>
+  <!-- What client saying -->
+  <section class="container container-clients">
+    <div class="clients">
+      <div class="clients-head">
+        <p class="clients-title">What Clients are saying</p>
+        <span class="clients-quotation">“</span>
+      </div>
+
+      <div class="clients-slider">
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/prev-icon.svg"
+            alt="prev"
+            class="img-slider"
+          />
         </div>
-  
-        <div class="clients-slider">
-          <div class="clients-slider_icon">
-            <img
-              src="../assets/icons/prev-icon.svg"
-              alt="prev"
-              class="img-slider"
-            />
-          </div>
-  
-          <p class="clients-slider_content">
-            Businesses at present had creatively generated effective advertising
-            campaigns in the form of audio visual media that includes the
-            television and radios and the print media that cover the newspaper and
-            campaign materials like the posters, brochures, business cards, flyers
-            and many more.
-          </p>
-  
-          <div class="clients-slider_icon">
-            <img
-              src="../assets/icons/next-icon.svg"
-              alt="next"
-              class="img-slider"
-            />
-          </div>
-        </div>
-  
-        <div class="clients-person">
-          <img src="../assets/images/desktop/person.png" class="img-person" />
-          <div class="clients-person_contact">
-            <p class="person-name">Ophelia Holland</p>
-            <p>@ophelia_holland</p>
-          </div>
+
+        <p class="clients-slider_content">
+          Businesses at present had creatively generated effective advertising
+          campaigns in the form of audio visual media that includes the
+          television and radios and the print media that cover the newspaper and
+          campaign materials like the posters, brochures, business cards, flyers
+          and many more.
+        </p>
+
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/next-icon.svg"
+            alt="next"
+            class="img-slider"
+          />
         </div>
       </div>
-    </section>
-  </main>
+
+      <div class="clients-person">
+        <img src="../assets/images/desktop/person.png" class="img-person" />
+        <div class="clients-person_contact">
+          <p class="person-name">Ophelia Holland</p>
+          <p>@ophelia_holland</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Products -->
+  <section class="products">
+    <div class="container-products">
+      <h2 class="products-title">Recent Products</h2>
+      <p class="products-desc">
+        Having used discount toner cartridges for twenty years, there have been
+        a lot of changes in the toner cartridge market. The market today is
+        approximately a twenty billion dollar business.
+      </p>
+      <div class="products-cards">
+        <include
+          src="./components/product-card.html"
+          locals='{
+                    "productImage": "../assets/images/desktop/products-1.png",
+                    "productView": "91312",
+                    "productTitle":"APP MAINTENANCE",
+                    "productDesc":"Lida Morrison, Nettie Burke"
+                  }'
+        >
+        </include>
+
+        <include
+          src="./components/product-card.html"
+          locals='{
+                    "productImage": "../assets/images/desktop/products-2.png",
+                    "productView": "91312",
+                    "productTitle":"FTA KEYS",
+                    "productDesc":"Ivan Alexander, Steven Soto, Clifford Hammond"
+                  }'
+        >
+        </include>
+
+        <include
+          src="./components/product-card.html"
+          locals='{
+                    "productImage": "../assets/images/desktop/products-3.png",
+                    "productView": "91312",
+                    "productTitle":"SMART WATCH",
+                    "productDesc":"Trevor James, Carl Stevenson"
+                  }'
+        >
+        </include>
+
+        <include
+          src="./components/product-card.html"
+          locals='{
+                    "productImage": "../assets/images/desktop/products-4.png",
+                    "productView": "91312",
+                    "productTitle":"WATCH APPS",
+                    "productDesc":"Glen Snyder, Andrew Goodwin, Lida Morrison "
+                  }'
+        >
+        </include>
+      </div>
+    </div>
+  </section>
+</main>
