feat: Add font and span for section head #6

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -1,35 +1,45 @@
 <main>
-    <!-- What client saying -->
-     <section class="container">
-        <div class="clients">
-            <h2 class="clients-title">What clients are saying</h2>
+  <!-- What client saying -->
+  <section class="container">
+    <div class="clients">
+      <div class="clients-head">
+        <span>“</span>
+        <p class="clients-title">What Clients are saying</p>
+      </div>
 
-
-            <div class="clients-slider">
-                <div class="clients-slider_icon">
-                    <img src="../assets/icons/prev-icon.svg" alt="prev" class="img-slider" />
-                </div>
-
-                <p class="clients-slider_content">
-                    Businesses at present had creatively generated effective advertising campaigns 
-                    in the form of audio visual media that includes the television and radios and the print media 
-                    that cover the newspaper and campaign materials like the posters, 
-                    brochures, business cards, flyers and many more.
-                </p>
-
-                <div class="clients-slider_icon">
-                    <img src="../assets/icons/next-icon.svg" alt="next" class="img-slider" />
-                </div>
-
-            </div>
-
-            <div class="clients-person">
-                <img src="../assets/images/desktop/person.png" class="img-person"/>
-                <div class="clients-person_contact">
-                    <p class="person-name">Ophelia Holland</p>
-                    <p>@ophelia_holland</p>
-                </div>
-            </div>
+      <div class="clients-slider">
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/prev-icon.svg"
+            alt="prev"
+            class="img-slider"
+          />
         </div>
-     </section>
+
+        <p class="clients-slider_content">
+          Businesses at present had creatively generated effective advertising
+          campaigns in the form of audio visual media that includes the
+          television and radios and the print media that cover the newspaper and
+          campaign materials like the posters, brochures, business cards, flyers
+          and many more.
+        </p>
+
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/next-icon.svg"
+            alt="next"
+            class="img-slider"
+          />
+        </div>
+      </div>
+
+      <div class="clients-person">
+        <img src="../assets/images/desktop/person.png" class="img-person" />
+        <div class="clients-person_contact">
+          <p class="person-name">Ophelia Holland</p>
+          <p>@ophelia_holland</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
