fix: duplicate background image and quotation position #6

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -1,6 +1,6 @@
 <main>
   <!-- What client saying -->
-  <section class="container">
+  <section class="container container-clients">
     <div class="clients">
       <div class="clients-head">
         <span>“</span>
