--- a/src/stylesheets/pages/home/_clients.scss
+++ b/src/stylesheets/pages/home/_clients.scss
@@ -1,22 +1,24 @@
 @use "../../abstracts/" as *;
 
-.container {
+.container-clients {
   width: 100%;
   @include background-img(
     "../assets/images/desktop/background-client-saying.png"
   );
+  background-position: unset;
 }
 .clients {
   color: $background-color;
   text-align: center;
-  padding: 80px 0 73px;
-  max-width: 1140px;
+  padding: 115px 0 73px;
+  max-width: 80%;
   margin: 0 auto;
   @include tablet {
     padding: 40px 80px;
   }
   @include mobile {
-    padding: 30px 12px;
+    padding: 30px 0;
+    max-width: 90%;
   }
 
   &-head {
@@ -58,7 +60,7 @@
 
   &-slider {
     @include flex($justify: space-between);
-    margin: 110px 0 53px;
+    margin: 122px 0 53px;
 
     @include tablet {
       margin: 80px 10px 30px;
@@ -71,6 +73,7 @@
     &_icon {
       max-width: 64px;
       max-height: 64px;
+      padding-top: 30px;
 
       img {
         width: 100%;
@@ -88,7 +91,7 @@
     }
 
     &_content {
-      width: 66%;
+      width: 60%;
       line-height: pxToRem(36);
       font-size: pxToRem(24);
       text-align: left;
