style: change padding for clients section #6

--- a/src/stylesheets/pages/home/_clients.scss
+++ b/src/stylesheets/pages/home/_clients.scss
@@ -14,7 +14,7 @@
   max-width: 80%;
   margin: 0 auto;
   @include tablet {
-    padding: 40px 80px;
+    padding: 40px 0;
   }
   @include mobile {
     padding: 30px 0;
