style: responsive and change padding item #7

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -44,7 +44,7 @@
     </section>
     <!-- Start Selling Instantly -->
      <section class="start-selling">
-        <span class="start-selling_title">Start Selling Instantly</span>
+        <h2 class="start-selling_title">Start Selling Instantly</h2>
         <p class="start-selling_sub">Start Selling With Your Pre-paid account. No deposit needed.</p>
 
         <form class="start-selling_form">
