--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -1,7 +1,7 @@
 <main>
     <!-- Start Selling Instantly -->
      <section class="start-selling">
-        <span class="start-selling_title">Start Selling Instantly</span>
+        <h2 class="start-selling_title">Start Selling Instantly</h2>
         <p class="start-selling_sub">Start Selling With Your Pre-paid account. No deposit needed.</p>
 
         <form class="start-selling_form">
