feat: Implement Subcribing plan section #11

--- a/src/stylesheets/components/_plan-card.scss
+++ b/src/stylesheets/components/_plan-card.scss
@@ -25,6 +25,9 @@
 
   }
 
+
+  @include flex($direction: column, $justify: space-between);
+
   &_top {
     position: relative;
     border-radius: inherit;
