--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -1,45 +1,96 @@
 <main>
-    <!-- What client saying -->
-    <section class="container container-clients">
-      <div class="clients">
-        <div class="clients-head">
-          <p class="clients-title">What Clients are saying</p>
-          <span class="clients-quotation">“</span>
+  <!-- What client saying -->
+  <section class="container container-clients">
+    <div class="clients">
+      <div class="clients-head">
+        <p class="clients-title">What Clients are saying</p>
+        <span class="clients-quotation">“</span>
+      </div>
+
+      <div class="clients-slider">
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/prev-icon.svg"
+            alt="prev"
+            class="img-slider"
+          />
         </div>
-  
-        <div class="clients-slider">
-          <div class="clients-slider_icon">
-            <img
-              src="../assets/icons/prev-icon.svg"
-              alt="prev"
-              class="img-slider"
-            />
-          </div>
-  
-          <p class="clients-slider_content">
-            Businesses at present had creatively generated effective advertising
-            campaigns in the form of audio visual media that includes the
-            television and radios and the print media that cover the newspaper and
-            campaign materials like the posters, brochures, business cards, flyers
-            and many more.
-          </p>
-  
-          <div class="clients-slider_icon">
-            <img
-              src="../assets/icons/next-icon.svg"
-              alt="next"
-              class="img-slider"
-            />
-          </div>
-        </div>
-  
-        <div class="clients-person">
-          <img src="../assets/images/desktop/person.png" class="img-person" />
-          <div class="clients-person_contact">
-            <p class="person-name">Ophelia Holland</p>
-            <p>@ophelia_holland</p>
-          </div>
+
+        <p class="clients-slider_content">
+          Businesses at present had creatively generated effective advertising
+          campaigns in the form of audio visual media that includes the
+          television and radios and the print media that cover the newspaper and
+          campaign materials like the posters, brochures, business cards, flyers
+          and many more.
+        </p>
+
+        <div class="clients-slider_icon">
+          <img
+            src="../assets/icons/next-icon.svg"
+            alt="next"
+            class="img-slider"
+          />
         </div>
       </div>
-    </section>
-  </main>
+
+      <div class="clients-person">
+        <img src="../assets/images/desktop/person.png" class="img-person" />
+        <div class="clients-person_contact">
+          <p class="person-name">Ophelia Holland</p>
+          <p>@ophelia_holland</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Subcribing plans -->
+  <section class="plans-container">
+    <div class="plans">
+      <h2 class="plans_title">Subscribing Plans</h2>
+      <div class="plans-cards">
+        <include
+          src="./components/plans-card.html"
+          locals='{
+                  "planImage": "../assets/images/desktop/plan-1.png",
+                  "planTitle": "FREEMIUM",
+                  "planDesc": "[`Basic Collections`,`10 Messages`,`50 Images per Day`]",
+                  "planPrice": "0"
+              }'
+        >
+        </include>
+
+        <include
+          src="./components/plans-card.html"
+          locals='{
+                  "planImage": "../assets/images/desktop/plan-2.png",
+                  "planTitle": "START UP",
+                  "planDesc": "[`Multiple Collections`,`100 Messages`,`100 Images per Day`]",
+                  "planPrice": "9"
+              }'
+        >
+        </include>
+
+        <include
+          src="./components/plans-card.html"
+          locals='{
+                  "planImage": "../assets/images/desktop/plan-3.png",
+                  "planTitle": "BUSINESS",
+                  "planDesc": "[`Unlimited Collections`,`500 Messages`,`300 Images per Day`,`Project Reviews`]",
+                  "planPrice": "29"
+              }'
+        >
+        </include>
+
+        <include
+          src="./components/plans-card.html"
+          locals='{
+                  "planImage": "../assets/images/desktop/plan-4.png",
+                  "planTitle": "ENTERPRISE",
+                  "planDesc": "[`Unlimited Collections`,`Unlimited Messages`,`Unlimited Images per Day`,`Project Reviews`]",
+                  "planPrice": "49"
+              }'
+        >
+        </include>
+      </div>
+    </div>
+  </section>
+</main>
