feat: Implement what people say section #12

--- a/src/stylesheets/pages/home/_feedback.scss
+++ b/src/stylesheets/pages/home/_feedback.scss
@@ -14,11 +14,11 @@
     font-size: 44px;
 
     @include tablet {
-        font-size: 32px;
+      font-size: 32px;
     }
 
     @include mobile {
-        font-size: 20px;
+      font-size: 20px;
     }
   }
 
@@ -36,6 +36,8 @@
     text-align: left;
     padding: 0 66px;
     border-radius: 16px;
+    border-radius: 16px;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.19), 0 6px 20px rgba(0, 0, 0, 0.23);
 
     @include tablet {
       padding: 0 50px;
@@ -83,7 +85,6 @@
       @include tablet {
         font-size: pxToRem(11);
         line-height: 1rem;
-
       }
     }
     &_name {
