--- a/src/stylesheets/components/_plan-card.scss
+++ b/src/stylesheets/components/_plan-card.scss
@@ -25,8 +25,13 @@
 
   }
 
-
   @include flex($direction: column, $justify: space-between);
+
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(255, 254, 254, 0.884), 0 6px 6px rgba(143, 142, 142, 0.664);
+
+  }
 
   &_top {
     position: relative;
