feat: responsive for form #10

--- a/src/stylesheets/pages/home/_contact.scss
+++ b/src/stylesheets/pages/home/_contact.scss
@@ -77,6 +77,12 @@
   }
 }
 
+.container-contact {
+  @include mobile {
+    padding: 0 15px;
+  }
+}
+
 .btn {
   padding: 15px 54px;
   text-align: center;
