--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -45,7 +45,7 @@
   </main>
   <!-- Get In touch -->
   <section class="contact">
-    <div class="container">
+    <div class="container container-contact">
       <h2 class="title">Get in Touch</h2>
       <form action="#" class="contact_form">
         <input
