style: change padding of card #12

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -65,6 +65,13 @@
             your company and its products.
           </p>
           <p class="feedback-card_name">Rachel Moreno</p>
+          <p class="feedback-card_content">
+            Attending a trade show can be a very effective method of promoting
+            your company and its products.
+          </p>
+          <p class="feedback-card_name feedback-card_name--secondary">
+            Rachel Moreno
+          </p>
           <p class="feedback-card_address">Lead Designer in okodesign.net</p>
           <div class="feedback-card_avatar feedback-card_avatar--seconday">
             <img class="img" src="../assets/images/desktop/client-2.png" />
