feat: Implement animate lazy load, capitalized title #5

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -2,7 +2,7 @@
   <!-- Stunning result -->
   <section class="result">
     <h3 class="result-title">Stunning Results</h3>
-    <p>Just look to the statistics we have generate the past year.</p>
+    <p class="result-desc">Just look to the statistics we have generate the past year.</p>
 
     <div class="result-cards">
       <include
@@ -11,7 +11,7 @@
         "resultImage": "../assets/images/desktop/circle-1.png",
         "resultPercent": "74",
         "resultSup": "98",
-        "resultTitle": "TOTAL CONVERSION",
+        "resultTitle": "total conversion",
         "resultDesc": "The past few years have seen a dramatic change in the public perception of cosmetic surgery."
       }'
       >
@@ -23,7 +23,7 @@
         "resultImage": "../assets/images/desktop/circle-2.png",
         "resultPercent": "39",
         "resultSup": "75",
-        "resultTitle": "FREE DOWNOADS",
+        "resultTitle": "free downloads",
         "resultDesc": "Can you imagine what we will be downloading in another twenty years?"
       }'
       >
@@ -35,7 +35,7 @@
         "resultImage": "../assets/images/desktop/circle-3.png",
         "resultPercent": "81",
         "resultSup": "15",
-        "resultTitle": "UNIQUE VISITORS",
+        "resultTitle": "unique visitors",
         "resultDesc": "WordPress, the premier free open-source blogging utility, has gone through several upgrades in its life."
       }'
       >
