feat: animate lazy load #8

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -97,6 +97,7 @@
       <input type="email" class="start-selling_input" placeholder="Email" />
       <input type="submit" class="start-selling_btn" value="REGISTER" />
     </form>
+  </section>
   <!-- Products -->
   <section class="products">
     <div class="container-products">
