feat: Implement Feedback section #12

--- a/src/stylesheets/components/_index.scss
+++ b/src/stylesheets/components/_index.scss
@@ -1,6 +1,7 @@
 @use "../abstracts/" as *;
 @forward "nav";
 @forward "resultCard";
-@forward "animate"
+@forward "animate";
+@forward "feedbackCard";
 
 
