--- a/src/stylesheets/components/_animate.scss
+++ b/src/stylesheets/components/_animate.scss
@@ -1,14 +1,44 @@
 @keyframes slideUp {
-    0% {
-        transform: translateY(30%);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateY(30%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    transform: translateX(30%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .slide-up {
-    animation: slideUp 3s forwards;
+  animation: slideUp 3s forwards;
+}
+
+.slide-left {
+  animation: slideLeft 3s forwards;
+}
+
+.slide-right {
+  animation: slideRight 3s forwards;
 }
